# rogue_lite_arpg

./: .gitignore  Cargo.toml  baba_yaga.js  baba_yaga_bg.wasm  baba_yaga_bg.wasm.d.ts  game_dev_project.js  game_dev_project_bg.wasm  game_dev_project_bg.wasm.d.ts  index.html  my-changes.patch  package.json  sgconfig.yml
.github/workflows/: build.yml  ci.yml  cleanup-closed-prs.yml  release.yml
assets/config/: enemies.ron  instances.ron
assets/scenes/: enemies.ron
crates/bevy_nc/: Cargo.toml
crates/bevy_nc/cli/: event.rs  log.rs  main.rs
crates/bevy_nc/console/: main.rs
crates/bevy_nc/src/: lib.rs  net.rs  plugin.rs
crates/bevy_nc/src/plugin/: handlers.rs
main/: Cargo.toml  baba_yaga.js  baba_yaga_bg.wasm.d.ts
main/src/: lib.rs
main/src/ai/: state.rs
main/src/animation/: components.rs  plugin.rs
main/src/character/: mod.rs
main/src/combat/: damage.rs  (+1 more)
pr-37/: baba_yaga.js  index.html
pr-39/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-40/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-40/src/: lib.rs
pr-42/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-44/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-46/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-49/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-59/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-63/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-64/: baba_yaga.js  index.html
pr-65/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-67/: index.html
pr-68/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-70/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-71/: Cargo.toml  baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-74/: baba_yaga.js
rules/: rule.yml
src/: animation.rs  lib.rs  main.rs  schedule.rs  setup.rs
src/ai/: mod.rs  state.rs
src/animation/: animate_sprite.rs  components.rs  mod.rs  plugin.rs  update_animation.rs  update_default_animations.rs
src/character/: animation.rs  behavior.rs  mod.rs  state.rs  vision.rs
src/chests/: components.rs  handle_open_chest_input.rs  mod.rs  open_chest.rs  plugin.rs  spawn_chests.rs
src/collision/: events.rs  handle_collisions.rs  mod.rs
src/combat/: aim_position.rs  components.rs  damage.rs  health.rs  invulnerable.rs  mana.rs  mod.rs  plugin.rs  projectile.rs
src/components/: burning_effect.rs  collider.rs  damage_effect.rs  effects.rs  enemy.rs  fireball.rs  freezing_effect.rs  health.rs  health_bar.rs  health_text.rs  mod.rs  player.rs  position.rs  projectile.rs  speed.rs
src/configuration/: assets.rs  collision_layers.rs  configuration_data.rs  debug.rs  mod.rs  physics.rs  plugins.rs  properties.rs  schedule.rs  setup.rs  view.rs
src/console/: mod.rs  net.rs  plugin.rs
src/controller/: plugin.rs
src/damage/: components.rs  events.rs  handle_damage.rs  mod.rs  plugin.rs  systems.rs
src/debug/: mod.rs
src/despawn/: components.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/econ/: components.rs  currency.rs  handle_gold_drop_event.rs  mod.rs  plugin.rs
src/economy/: gold.rs  mod.rs
src/enemy/: components.rs  events.rs  mod.rs  plugin.rs
src/events/: mod.rs  projectile_hit_event.rs
src/helpers/: handle_enemy_death.rs  labels.rs  ldtk.rs  mod.rs  spell_factory.rs  tiled.rs
src/items/: components.rs  consumable.rs  factory.rs  inventory.rs  item_factory.rs  lootable.rs  magnet.rs  mainhand_factory.rs  mod.rs  offhand_factory.rs  shield.rs  spawn.rs  spawn_item_factory.rs  staff.rs  tome.rs  weapon_factory.rs
src/labels/: layer.rs  mod.rs  sets.rs  states.rs
src/map/: chest.rs  components.rs  events.rs  level_plugin.rs  map_plugin.rs  mod.rs  plugin.rs  portal.rs  resources.rs  run_start_portal_component.rs  run_start_portal_enter_event.rs  warp_zone_components.rs  warpzone_enter_event.rs
src/menu/: mod.rs  pause.rs  player_stats.rs  stats_shop.rs
src/movement/: components.rs  motion.rs  plugin.rs
src/npc/: components.rs  despawn.rs  dialouge.rs  events.rs  mod.rs  movement.rs  on_npc_interaction.rs  plugin.rs  setup.rs
src/player/: components.rs  events.rs  interact.rs  mod.rs  player_data.rs  plugin.rs
src/plugins/: enemy_plugin.rs  enemy_spawner_plugin.rs  experience_plugin.rs  level_plugin.rs  mod.rs  player_plugin.rs  projectile_plugin.rs  ui_plugin.rs
src/progression/: components.rs  mod.rs  systems.rs
src/projectile/: components.rs  despawn.rs  events.rs  handle_projectile_hit.rs  mod.rs  plugin.rs
src/resources/: assets.rs  enemy_spawn_config.rs  map_bounds.rs  mod.rs  processed.rs  tile_size.rs  zone.rs
src/screen/: game_over.rs  loading.rs  mod.rs  splash.rs
src/spells/: components.rs  mod.rs  spell_factory.rs
src/status_effects/: components.rs  handle_status_effect_applied.rs  handle_statuses.rs  mod.rs  plugin.rs  process_status_effects.rs  status_effect_applied_event.rs  status_effect_plugin.rs  status_effects.rs
src/systems/: animate_sprite.rs  apply_projectile_effects.rs  camera.rs  cast_fireball.rs  cast_spell.rs  check_projectile_collision.rs  check_warpzone_collision.rs  cursor.rs  debug_warp.rs  enemy_movement.rs  enemy_spawn.rs  handle_enemy_defeated.rs  handle_player_level_up.rs  handle_projectile_hits.rs  handle_warpzone_enter.rs  health_bars.rs  mod.rs  move_fireball.rs  move_projectiles.rs  player_movement.rs  player_setup.rs  process_effects.rs  process_status_effects.rs  projectile_system.rs  setup.rs  tilemap_generation.rs  warpzone_setup.rs
src/ui/: action_bar.rs  button_interactions.rs  constants.rs  damage_overlay.rs  display_case.rs  display_case_slot.rs  element.rs  equipment_menu.rs  game_over_screen.rs  game_overlay.rs  input.rs  inventory_menu.rs  load_screen.rs  main_menu.rs  menu_helpers.rs  mod.rs  pause_menu.rs  pause_screen.rs  pause_screen_base.rs  player_overlay.rs  plugin.rs  primitives.rs  setup.rs  start_screen.rs  stats_menu.rs  time_control.rs  update.rs
src/ui_primitives/: damage_overlay.rs  mod.rs  primitives.rs
src/utility/: mod.rs
src/world/: chest.rs  gold.rs  mod.rs  portal.rs
tests/: inventory_test.rs  map_layout_test.rs
(+435 files in other folders)
