[package]
name = "baba_yaga"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "baba_yaga"              # for wasm stuff
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "baba_yaga_bin" # for local build stuff
path = "src/main.rs"

[dependencies]
bevy = { version = "0.17.0", features = ["dynamic_linking", "bevy_dev_tools", "experimental_bevy_feathers", "track_location"] }
bevy_ecs_tilemap = { git = "https://github.com/ChristopherBiscardi/bevy_ecs_tilemap", branch = "bevy-0.17" }
bevy_asset_loader = { version = "0.24.0-rc.1", features = ["2d"] }
bevy_behave = { git = "https://github.com/HazelTheWitch/bevy_behave", branch = "main" }
accesskit = "0.21"
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
rand = "0.9"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
serde = "1.0.217"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"

[features]
atlas = []
trace = ["bevy/trace_tracy", "bevy/trace"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
