[package]
name = "bevy_nc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
humansize = "2.1.3"
anyhow = "1.0.97"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
async-executor = "1.13.1"
futures-lite = "2.6.0"
futures-concurrency = "7.6.3"
async-io = "2.4.0"
